correcting css version mobile  of objectif page

--- a/src/app/features/Home/Object/Object.component.css
+++ b/src/app/features/Home/Object/Object.component.css
@@ -391,7 +391,7 @@ a {
 }
 
 .cols .col {
-    width: calc(25% - 2rem);
+    width: 50%;
     margin: 1rem;
     cursor: pointer;
 
@@ -424,14 +424,12 @@ a {
     height: auto;
     border-radius: 10px;
     color: #fff;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .back {
-    background: #cedce7;
-    background: -webkit-linear-gradient(45deg, #cedce7 0%, #596a72 100%);
-    background: -o-linear-gradient(45deg, #cedce7 0%, #596a72 100%);
-    background: linear-gradient(45deg, #cedce7 0%, #596a72 100%);
+    background: #fff;
+   
 }
 
 .front:after {
@@ -520,6 +518,13 @@ a {
     position: relative;
     color: #cdeaff;
 }
+.back .inner p {
+  font-size: 1.2rem;
+  position: relative;
+  margin-bottom: 30px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
 
 .front .inner p:after {
     content: '';
@@ -541,24 +546,38 @@ a {
 }
 
 
-@media screen and (max-width: 64rem) {
-    .col {
-        width: calc(33.333333% - 2rem);
-    }
+@media screen and (max-width: 1024px) {
+  .col {
+    width: 320px; 
+  }
 }
 
-@media screen and (max-width: 48rem) {
-    .col {
-        width: calc(50% - 2rem);
-    }
+@media screen and (max-width: 768px) {
+  .cols {
+    flex-direction: column; 
+    align-items: center; 
+  }
+
+  .col {
+    width: 100%;
+    margin: 0 0 32px 0; 
+  }
+
+  
 }
 
-@media screen and (max-width: 32rem) {
-    .col {
-        width: 100%;
-        margin: 0 0 2rem 0;
-    }
+@media screen and (max-width: 512px) {
+  .cols {
+    flex-direction: column; /* Toujours vertical */
+    align-items: center;
+  }
+
+  .col {
+    width: 100%; /* Carte pleine largeur */
+    margin: 0 0 32px 0;
+  }
 }
+
 
 
 /* Section Styles */
